Make article category a link to filtered articles page

--- a/src/containers/ArticlePage/ArticlePage.module.css
+++ b/src/containers/ArticlePage/ArticlePage.module.css
@@ -60,6 +60,13 @@
 .category {
   color: var(--marketplaceColor);
   font-weight: 500;
+  text-decoration: none;
+  transition: color 0.2s ease;
+}
+
+.category:hover {
+  color: var(--marketplaceColorDark);
+  text-decoration: none;
 }
 
 .dot {
