--- a/src/containers/SearchPage/DimensionsFilter/DimensionsFilter.module.css
+++ b/src/containers/SearchPage/DimensionsFilter/DimensionsFilter.module.css
@@ -7,8 +7,8 @@
 .dimensionsContainer {
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  padding: 12px 0;
+  gap: 8px;
+  padding: 16px 0 0;
 }
 
 .dimensionRow {
