--- a/src/containers/EditListingPage/EditListingWizard/EditListingPricingAndStockPanel/EditListingPricingAndStockForm.module.css
+++ b/src/containers/EditListingPage/EditListingWizard/EditListingPricingAndStockPanel/EditListingPricingAndStockForm.module.css
@@ -120,7 +120,8 @@
 .frameSubheading {
   font-size: 16px;
   font-weight: var(--fontWeightSemiBold);
-  margin: 0 0 8px 0;
+  line-height: 24px;
+  margin: 0;
   color: var(--colorGrey900);
 }
 
@@ -128,6 +129,7 @@
   font-size: 14px;
   color: var(--colorGrey500);
   margin: 0 0 16px 0;
+  padding: 0;
 }
 
 .recommendedFrameRow {
